gccida/g0/update_equiv_regs
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/update_equiv_regs/src/local-alloc.c:1300:20: error: expected identifier or '('
unsigned __int64 *(short *)0x; // [rsp+98h] [rbp-68h] 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/update_equiv_regs/src/local-alloc.c:1300:20: error: expected ')'
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/update_equiv_regs/src/local-alloc.c:1300:19: note: to match this '('
unsigned __int64 *(short *)0x; // [rsp+98h] [rbp-68h] 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/update_equiv_regs/src/local-alloc.c:1301:16: error: expected identifier or '('
unsigned int *(short *)0xnum_; // [rsp+A0h] [rbp-60h] 
               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/update_equiv_regs/src/local-alloc.c:1301:16: error: expected ')'
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/update_equiv_regs/src/local-alloc.c:1301:15: note: to match this '('
unsigned int *(short *)0xnum_; // [rsp+A0h] [rbp-60h] 
              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/update_equiv_regs/src/local-alloc.c:1326:53: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( note = insn[3].fld[0].rtx; note; note = ( rtx)note[1] ) 
                                                    ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/update_equiv_regs/src/local-alloc.c:1334:26: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v0 = (  struct rtx_def *)insn[2]; 
                         ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/update_equiv_regs/src/local-alloc.c:1342:13: error: expected identifier or '('
 struct set = v0; 
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/update_equiv_regs/src/local-alloc.c:1350:15: error: expected expression
if ( part !=  struct set ) 
              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/update_equiv_regs/src/local-alloc.c:1355:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
src = ( rtx)set[1]; 
            ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/update_equiv_regs/src/local-alloc.c:1429:1: error: use of undeclared identifier 'recorded_label_ref_0'; did you mean 'recorded_label_ref'?
recorded_label_ref_0 = 1; 
^~~~~~~~~~~~~~~~~~~~
recorded_label_ref
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/update_equiv_regs/src/local-alloc.c:276:12: note: 'recorded_label_ref' declared here
static int recorded_label_ref;
           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/update_equiv_regs/src/local-alloc.c:1467:39: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( insn = bb_0->end; insn != ( rtx)bb_0->head[1]; insn = ( rtx)insn[1] ) 
                                      ^~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/update_equiv_regs/src/local-alloc.c:1467:67: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( insn = bb_0->end; insn != ( rtx)bb_0->head[1]; insn = ( rtx)insn[1] ) 
                                                                  ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/update_equiv_regs/src/local-alloc.c:1471:53: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( link = insn[3].fld[0].rtx; link; link = ( rtx)link[1] ) 
                                                    ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/update_equiv_regs/src/local-alloc.c:1490:1: error: statement requires expression of scalar type ('struct rtx_def' invalid)
for ( last_link = link; last_link[1]; last_link = ( rtx)last_link[1] ) 
^                       ~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/update_equiv_regs/src/local-alloc.c:1490:57: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( last_link = link; last_link[1]; last_link = ( rtx)last_link[1] ) 
                                                        ^~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/update_equiv_regs/src/local-alloc.c:1496:20: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
equiv_link = ( rtx)equiv_link[1]; 
                   ^~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/update_equiv_regs/src/local-alloc.c:1509:39: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
reg_equiv[regno_1].init_insns = ( rtx)reg_equiv[regno_1].init_insns[1]; 
                                      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/update_equiv_regs/src/local-alloc.c:1511:31: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
else if ( equiv_insn != ( rtx)insn[1] ) 
                              ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/update_equiv_regs/src/local-alloc.c:1526:45: error: assigning to 'uint64' (aka 'unsigned long long') from incompatible type 'struct rtx_def'
*( _QWORD *)basic_block_info->data.l[block] = insn[1]; 
                                            ^ ~~~~~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/update_equiv_regs/src/obj/local-alloc.o] Error 1
